# Catalogue-of-Life-Agent

./: .env  .gitignore  Dockerfile  Procfile  README.md  adversarial_test_report.json  col_agent.py  col_agent_new_sdk.py  col_agent_sdk.py  compose.yaml  full_col_agent_test_prompts.txt  main.py  modified_sdk.py  pyproject.toml
src/: __main__.py  col_agent.py  main.py
src/CoL.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: adversarial_tests.py  interactive_test.py  quick_test.py  test_agent.py
